--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MusicFragment">
+    tools:context=".Music.MusicFragment">
 
 
     <TextView
@@ -19,14 +19,6 @@
         android:textSize="30dp"
         android:fontFamily="@font/gotbold"
         />
-    <TextView
-        android:id="@+id/no_songs_text"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Песни не найдены"
-        android:fontFamily="@font/centurygothic"
-        android:textColor="@color/white"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
