--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".PlayerFragment"
+    tools:context=".Music.PlayerFragment"
     android:background="@color/my_backgroundcolor">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -148,13 +148,13 @@
             <SeekBar
                 android:id="@+id/songSeekBar"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
                 android:indeterminate="false"
                 android:progressDrawable="@drawable/seek_progress_music_bar"
-                android:thumb="@drawable/seek_progress_music_bar_thumb"
+                android:thumb="@drawable/seek_progress_music_bar_normal_thumb"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -176,7 +176,7 @@
                 android:id="@+id/playSongImageButton"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/pause_song_button"
+                android:background="@drawable/pressed_button_selector"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
