--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoFragment">
+    tools:context=".Video.VideoFragment"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/videoTopTitle"
@@ -17,5 +18,11 @@
         android:textColor="@color/selected"
         android:textSize="30dp"
         android:fontFamily="@font/gotbold"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/video_recycle_view"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="match_parent"
+        />
 
-</FrameLayout>
+</LinearLayout>
