--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/musicFragment"
-        android:name="com.example.hypermedia2.MusicFragment"
+        android:name="com.example.hypermedia2.Music.MusicFragment"
         android:label="fragment_music"
         tools:layout="@layout/fragment_music" >
         <action
@@ -25,9 +25,25 @@
     </fragment>
     <fragment
         android:id="@+id/videoFragment"
-        android:name="com.example.hypermedia2.VideoFragment"
+        android:name="com.example.hypermedia2.Video.VideoFragment"
         android:label="fragment_video"
-        tools:layout="@layout/fragment_video" />
+        tools:layout="@layout/fragment_video" >
+        <action
+            android:id="@+id/action_videoFragment_to_videoFolder"
+            app:destination="@id/videoFolder">
+            <argument
+                android:name="folderName"
+                app:argType="string"
+                android:defaultValue="null"
+                />
+            <argument
+                android:name="myArg"
+                app:argType="string"
+                android:defaultValue="Hello Fr" />
+        </action>
+
+
+    </fragment>
     <fragment
         android:id="@+id/otherFilesFragment"
         android:name="com.example.hypermedia2.OtherFilesFragment"
@@ -35,11 +51,20 @@
         tools:layout="@layout/fragment_other_files" />
     <fragment
         android:id="@+id/playerFragment"
-        android:name="com.example.hypermedia2.PlayerFragment"
+        android:name="com.example.hypermedia2.Music.PlayerFragment"
         android:label="fragment_player"
         tools:layout="@layout/fragment_player" >
         <action
             android:id="@+id/action_playerFragment_to_musicFragment"
             app:destination="@id/musicFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/videoFolder"
+        android:name="com.example.hypermedia2.Video.VideoFolder"
+        android:label="fragment_video_folder"
+        tools:layout="@layout/fragment_video_folder" >
+        <action
+            android:id="@+id/action_videoFolder_to_videoFragment"
+            app:destination="@id/videoFragment" />
     </fragment>
 </navigation>
