Закончен видеоплеер Подготовлен checkbox в папке видеоролика для SQLite

--- a/app/src/main/res/layout/videofiles_view.xml
+++ b/app/src/main/res/layout/videofiles_view.xml
@@ -2,9 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_height="wrap_content"
     android:padding="5dp">
+
+    <CheckBox
+        android:visibility="gone"
+        android:id="@+id/video_folder_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:buttonTint="@color/gray"
+        tools:targetApi="lollipop" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="150dp"
