--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/my_backgroundcolor"
+    android:background="@drawable/background_gradient_theme"
     tools:context=".MainActivity">
 
     <fragment
@@ -17,9 +17,11 @@
         android:layout_weight="1"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
+        android:gravity="center|bottom"
         android:orientation="vertical">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:id="@+id/miniPlayer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -85,10 +87,9 @@
             android:layout_height="70dp"
             android:id="@+id/navigation_menu"
             style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-            android:padding="10dp"
             app:menu="@menu/bottom_nav_menu"
             android:layout_gravity="bottom"
-            app:labelVisibilityMode="unlabeled"
+            app:itemTextColor="@color/selected"
             app:itemIconTint="@drawable/selector_nav_button"
             android:background="@drawable/bottom_navigation_background"/>
     </LinearLayout>
