--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -5,20 +5,33 @@
     android:layout_height="match_parent"
     tools:context=".Music.MusicFragment">
 
-
-    <TextView
+    <LinearLayout
         android:id="@+id/musicTopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="38px"
-        android:layout_marginTop="118px"
-        android:text="Музыка"
-        android:textColor="@color/selected"
-        android:textSize="30dp"
-        android:fontFamily="@font/gotbold"
-        />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="118px"
+            android:layout_marginLeft="8px"
+            android:src="@drawable/logo1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="38px"
+            android:layout_marginTop="118px"
+            android:text="Музыка"
+            android:textColor="@color/selected"
+            android:textSize="30dp"
+            android:fontFamily="@font/gotbold"
+            />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
