--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -6,18 +6,33 @@
     tools:context=".Video.VideoFragment"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:id="@+id/videoTopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="33px"
-        android:layout_marginTop="118px"
-        android:text="Видео"
-        android:textColor="@color/selected"
-        android:textSize="30dp"
-        android:fontFamily="@font/gotbold"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="118px"
+            android:layout_marginLeft="8px"
+            android:src="@drawable/logo1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="33px"
+            android:layout_marginTop="118px"
+            android:text="Видео"
+            android:textColor="@color/selected"
+            android:textSize="30dp"
+            android:fontFamily="@font/gotbold"/>
+
+    </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/video_recycle_view"
         android:layout_width="match_parent"
