--- a/app/src/main/res/layout/fragment_video_folder.xml
+++ b/app/src/main/res/layout/fragment_video_folder.xml
@@ -11,9 +11,23 @@
         android:id="@+id/videoFolderToolbar"
         android:layout_width="match_parent"
         app:menu="@menu/main_toolbar"
-        app:title="@string/app_name"
         app:titleTextColor="#FF00C2CB"
         android:layout_height="?attr/actionBarSize">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/counter_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="18sp"
+                android:text="Выбрано: 0"
+                android:textColor="@color/themecolor"
+                android:fontFamily="@font/centurygothic"/>
+        </RelativeLayout>
 
 
 
