--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
 
     <item android:id="@id/homeFragment"
         android:icon="@drawable/home_icon_nav"
-        android:title=""/>
+        android:title="Главная"/>
     <item android:id="@id/videoFragment"
         android:icon="@drawable/video_icon_nav"
-        android:title=""/>
+        android:title="Видео"/>
     <item android:id="@id/musicFragment"
         android:icon="@drawable/music_icon_nav"
-        android:title=""/>
+        android:title="Музыка"/>
     <item android:id="@id/otherFilesFragment"
         android:icon="@drawable/otherfiles_icon_nav"
         android:title=""/>
