--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,8 @@
     <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
+    <style name="CustomDialogStyle" parent="Theme.AppCompat.Dialog">
+        <!-- Здесь определите свои настройки стиля -->
+    </style>
 
 </resources>
