--- a/app/src/main/res/layout/custom_controls.xml
+++ b/app/src/main/res/layout/custom_controls.xml
@@ -39,6 +39,7 @@
             android:id="@+id/videoView_more"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:visibility="gone"
             android:layout_weight="0"
             android:layout_marginRight="3dp"
             android:background="@android:color/transparent"
@@ -49,10 +50,9 @@
     <LinearLayout
         android:id="@+id/videoView_two_layout"
         android:layout_width="wrap_content"
-        android:layout_height="180dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
+        android:gravity="center_horizontal"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/videoView_four_layout"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -63,25 +63,24 @@
             android:id="@+id/videoView_brightness_image"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginLeft="2dp"
+
+            android:layout_marginLeft="-50dp"
             android:layout_marginBottom="7dp"
             android:layout_weight="0"
             android:src="@drawable/brightness" />
 
         <SeekBar
             android:id="@+id/videoView_brightness"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="-50dp"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             android:layout_marginLeft="-50dp"
-            android:layout_weight="1"
             android:max="255"
             android:progress="150"
             android:progressBackgroundTint="@color/white"
             android:progressTint="@color/themecolor"
             android:rotation="270"
-            android:scaleY="3"
+            android:scaleY="4"
+            android:background="@android:color/transparent"
             android:thumb="@null"
             tools:targetApi="lollipop" />
 
