--- a/app/src/main/res/layout/folder_view.xml
+++ b/app/src/main/res/layout/folder_view.xml
@@ -4,11 +4,25 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+    <CheckBox
+        android:visibility="gone"
+        android:id="@+id/playlist_folder_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:buttonTint="@color/gray"
+        />
+
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/folder"/>
-
+    <ImageView
+        android:id="@+id/kids_indicator"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:visibility="gone"
+        android:layout_gravity="bottom"
+        android:src="@drawable/child_controll"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,4 +51,5 @@
             android:textSize="14dp"
             />
     </LinearLayout>
+
 </LinearLayout>
