--- a/app/src/main/res/layout/videofiles_view.xml
+++ b/app/src/main/res/layout/videofiles_view.xml
@@ -94,11 +94,14 @@
         </LinearLayout>
     </LinearLayout>
 
+
     <ImageView
         android:id="@+id/video_menu"
         android:layout_weight="0"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/option"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
