--- a/app/src/main/res/layout/custom_controls.xml
+++ b/app/src/main/res/layout/custom_controls.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:layout_marginRight="48dp"
             android:maxLines="2"
             android:fontFamily="@font/centurygothic"
             android:text="@string/long_text"
@@ -50,7 +51,7 @@
     <LinearLayout
         android:id="@+id/videoView_two_layout"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:visibility="visible"
