--- a/app/src/main/res/layout/dialog_do_you_wanna.xml
+++ b/app/src/main/res/layout/dialog_do_you_wanna.xml
@@ -6,41 +6,14 @@
     android:padding="16dp"
     android:orientation="vertical">
 
-    <EditText
-        android:hint="Введите название плейлиста"
-        android:id="@+id/edit_playlistname"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Хотите ли вы организовать родительский контроль?"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:fontFamily="@font/centurygothic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/selected"/>
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_below="@id/edit_playlistname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RadioButton
-            android:id="@+id/radio_music"
-            android:text="Музыкальный плейлист"
-            android:textColor="@color/white"
-            android:fontFamily="@font/centurygothic"
-            android:layout_width="wrap_content"
-            android:buttonTint="@color/selected"
-            android:layout_height="wrap_content" />
-
-        <RadioButton
-            android:id="@+id/radio_video"
-            android:fontFamily="@font/centurygothic"
-            android:textColor="@color/white"
-            android:text="Видео-плейлист"
-            android:layout_width="wrap_content"
-            android:buttonTint="@color/selected"
-            android:layout_height="wrap_content" />
-
-    </RadioGroup>
+        android:gravity="center"
+        android:textSize="25dp"
+        android:fontFamily="@font/gotbold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +21,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_cancel"
+            android:id="@+id/btn_controll_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -61,7 +34,7 @@
             android:textColor="@color/selected" />
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/btn_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -69,7 +42,7 @@
             android:fontFamily="@font/centurygothic"
             android:background="@android:color/transparent"
             android:stateListAnimator="@null"
-            android:text="Добавить"
+            android:text="Да"
             android:textAllCaps="false"
             android:textColor="@color/selected" />
     </LinearLayout>
