--- a/app/src/main/res/layout/folder_view.xml
+++ b/app/src/main/res/layout/folder_view.xml
@@ -16,17 +16,12 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/folder"/>
-    <ImageView
-        android:id="@+id/kids_indicator"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:visibility="gone"
-        android:layout_gravity="bottom"
-        android:src="@drawable/child_controll"/>
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical">
 
@@ -51,5 +46,11 @@
             android:textSize="14dp"
             />
     </LinearLayout>
+    <ImageView
+        android:id="@+id/kids_indicator"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:visibility="invisible"
+        android:src="@drawable/child_controll"/>
 
 </LinearLayout>
