--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -84,13 +84,13 @@
 
             <TextView
                 android:id="@+id/playerSongName"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:fontFamily="@font/gotbold"
                 android:text="SampleSongName"
                 android:textColor="@color/white"
-
+                android:maxLines="1"
                 android:textSize="24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
