--- a/app/src/main/res/layout/fragment_creating_secretword.xml
+++ b/app/src/main/res/layout/fragment_creating_secretword.xml
@@ -31,6 +31,7 @@
         android:id="@+id/edit_secretword"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:maxLines="1"
         android:fontFamily="@font/centurygothic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
